logs/object_coordinates_centers/build.make.025.log.stderr
/home/dan/dan_ws/src/object_coordinates_centers/src/pointXYZ_from_xy.cpp: In function ‘void callBack(const ConstPtr&)’:
/home/dan/dan_ws/src/object_coordinates_centers/src/pointXYZ_from_xy.cpp:20:23: error: cannot convert ‘ros::Time’ to ‘uint64_t {aka long unsigned int}’ in assignment
  centers.header.stamp = ros::Time::now();
                       ^
/home/dan/dan_ws/src/object_coordinates_centers/src/pointXYZ_from_xy.cpp:27:33: error: base operand of ‘->’ has non-pointer type ‘pcl::PointCloud<pcl::PointXYZRGB>’
   mark.header.frame_id = centers->header.frame_id;
                                 ^
make[2]: *** [CMakeFiles/pointXYZ.dir/src/pointXYZ_from_xy.cpp.o] Error 1
make[1]: *** [CMakeFiles/pointXYZ.dir/all] Error 2
make: *** [all] Error 2
